@@ -1,6 +1,7 @@
 
 [mod-setting-name]
-ts-transition-time=Transition speed (km/h) [img=info]
+ts-transition-speed=Transition speed (km/h) [img=info]
+ts-transition-time=Transition time (seconds) [img=info]
 ts-wait-at-signal=Signal timeout (seconds) [img=info]
 ts-zoom=Zoom [img=info]
 ts-variable-zoom=Variable zoom [img=info]
@@ -13,7 +14,8 @@ ts-linked-game-control-hotkey=Escape with game controls [img=info]
 ts-secrets=Enable secret focus [img=info]
 
 [mod-setting-description]
-ts-transition-time=The speed at which the camera will move while transitioning from one train to the next. \n[color=blue]Default is:[/color] [color=orange]0[/color] (instant transitions) \nSuggested values based on train max speeds: \n[color=orange]259.2[/color] for trains with [item=coal] or [item=wood] fuel \n[color=orange]272.2[/color] for trains with [item=solid-fuel] fuel \n[color=orange]298.1[/color] for trains with [item=rocket-fuel] or [item=nuclear-fuel] fuel
+ts-transition-speed=The speed at which the camera will move while transitioning from one train to the next. \n[color=blue]Default is:[/color] [color=orange]0[/color] (instant transitions) \nSuggested values based on train max speeds: \n[color=orange]259.2[/color] for trains with [item=coal] or [item=wood] fuel \n[color=orange]272.2[/color] for trains with [item=solid-fuel] fuel \n[color=orange]298.1[/color] for trains with [item=rocket-fuel] or [item=nuclear-fuel] fuel
+ts-transition-time=The number of seconds it takes to transition from one train to the next. \n[color=blue]Default is[/color] [color=orange]0[/color] (instant transitions) \nNote: trainsaver will default to using Transition Speed instead of Transition Time when Transition Speed is greater than 0.
 ts-wait-at-signal=The minumum number of seconds before trainsaver switches to a new train when the current train is stopped at a signal. \n[color=blue]Default is:[/color] [color=orange]30[/color]
 ts-zoom=The camera's zoom level. \n[color=blue]Default is:[/color] [color=orange].3[/color]
 ts-variable-zoom=When enabled, the camera's zoom will vary by up to [color=orange]±20%[/color]
