@@ -2,11 +2,13 @@
 Version: 0.0.12
 Date: TBD
   Changes:
-    - changed transition time (seconds) setting to transition speed (km/h)
+    - added mod setting for transition speed (km/h). trainsaver will now default to using the speed setting instead of the time setting when the speed setting value is greater than 0.
     - increased variable zoom modifier from ±15% to ±20%
-    - updated mod setting descriptions for clarity and readability
+    - updated mod setting names and descriptions for clarity and readability
     - fixed that camera would not always pan back to player character when trainsaver was ending due to inactivity by removing that functionality entirely, now trainsaver will just instantly transition back to player character instead
+    - increased minimum value for inactivity timeout setting from 1 second to 1 minute
     - added remote interface for other mods to check if trainsaver is active for a given player
+    - added remote interface for other mods to get the currently followed target for a given player
     - various performance improvements
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.11
